# unshifted

./: .gitignore  LICENSE  Pipfile  README.md  classes.py  instructions.py  pyproject.toml  test.unshifted  unshifted.py
examples/: 1to10.unshifted  double_hello.unshifted
