[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "Unshifted"
author = "Amphibological"
author-email = "james.chiella@gmail.com"
home-page = "amphibological.github.io"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
unshifted = "unshifted:main"